[package]
name = "raytracer"
version = "0.1.0"
authors = ["oleg@eterevsky.com"]
edition = "2018"
repository = "https://github.com/eterevsky/raytracer"

[lib]
name = "raytracer"
path = "src/lib.rs"

[dependencies]
cgmath = "*"
image = {version = "*", default-features = false, features = ["png"]}
rand = "*"
rand_distr = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "benchmarks"
harness = false