[package]
name = "raytracer"
version = "0.1.0"
authors = ["oleg@eterevsky.com"]
edition = "2018"
repository = "https://github.com/eterevsky/raytracer"

[lib]
name = "raytracer"
path = "src/lib.rs"

[dependencies]
cgmath = "*"
image = {version = "*", default-features = false, features = ["png"]}
nalgebra = "*"
rand = {version = "0.7", default-features = false, features = ["getrandom", "small_rng"]}
rand_distr = {version = "*", default-features = false}

[dev-dependencies]
approx = { version = "0.4", default-features = false }
criterion = "*"

[[bench]]
name = "benchmarks"
harness = false