[package]
name = "raytracer"
version = "0.1.0"
authors = ["oleg@eterevsky.com"]
edition = "2018"
repository = "https://github.com/eterevsky/raytracer"

[lib]
name = "raytracer"
path = "src/lib.rs"

[dependencies]
cgmath = "*"
image = {version = "*", default-features = false, features = ["png"]}
nalgebra = "*"
rand = {version = "0.8", default-features = false, features = ["getrandom", "small_rng", "std_rng", "std"]}
rand_distr = {version = "0.4", default-features = false}
glam = "*"

[dev-dependencies]
approx = { version = "0.4", default-features = false }
criterion = "*"

[[bench]]
name = "benchmarks"
harness = false